--- a/test/fixtures/three.graphql/graphiql.css
+++ b/test/fixtures/three.graphql/graphiql.css
@@ -81,6 +81,7 @@
   cursor: pointer;
   font-size: 14px;
   margin: 0;
+  outline: 0;
   padding: 2px 20px 0 18px;
 }
 
@@ -122,7 +123,6 @@
   display: flex;
   flex-direction: column;
   flex: 1;
-  flex-basis: 1em;
   position: relative;
 }
 
@@ -154,9 +154,6 @@
   font-size: 18px;
   margin: -7px -8px -6px 0;
   padding: 18px 16px 15px 12px;
-  background: 0;
-  border: 0;
-  line-height: 14px;
 }
 
 .graphiql-container div .query-editor {
@@ -238,7 +235,6 @@
 .graphiql-container .toolbar-button {
   background: #fdfdfd;
   background: linear-gradient(#f9f9f9, #ececec);
-  border: 0;
   border-radius: 3px;
   box-shadow:
     inset 0 0 0 1px rgba(0,0,0,0.20),
@@ -320,6 +316,10 @@
     inset 0 0 6px rgba(0, 0, 0, 0.1);
 }
 
+.graphiql-container .execute-button:focus {
+  outline: 0;
+}
+
 .graphiql-container .toolbar-menu,
 .graphiql-container .toolbar-select {
   position: relative;
@@ -386,8 +386,8 @@
 .graphiql-container .toolbar-select-options > li.hover,
 .graphiql-container .toolbar-select-options > li:active,
 .graphiql-container .toolbar-select-options > li:hover,
-.graphiql-container .history-contents > li:hover,
-.graphiql-container .history-contents > li:active {
+.graphiql-container .history-contents > p:hover,
+.graphiql-container .history-contents > p:active {
   background: #e10098;
   color: #fff;
 }
@@ -994,9 +994,6 @@ span.CodeMirror-selectedtext { background: none; }
   padding: 17px 12px 16px 16px;
   text-overflow: ellipsis;
   white-space: nowrap;
-  background: 0;
-  border: 0;
-  line-height: 14px;
 }
 
 .doc-explorer-narrow .doc-explorer-back {
@@ -1056,33 +1053,6 @@ span.CodeMirror-selectedtext { background: none; }
 
 .graphiql-container .doc-value-description > :last-child {
   margin-bottom: 4px;
-}
-
-.graphiql-container .doc-type-description code,
-.graphiql-container .doc-type-description pre,
-.graphiql-container .doc-category code,
-.graphiql-container .doc-category pre {
-  --saf-0: rgba(var(--sk_foreground_low,29,28,29),0.13);
-  font-size: 12px;
-  line-height: 1.50001;
-  font-variant-ligatures: none;
-  white-space: pre;
-  white-space: pre-wrap;
-  word-wrap: break-word;
-  word-break: normal;
-  -webkit-tab-size: 4;
-  -moz-tab-size: 4;
-  tab-size: 4;
-}
-
-.graphiql-container .doc-type-description code,
-.graphiql-container .doc-category code {
-  padding: 2px 3px 1px;
-  border: 1px solid var(--saf-0);
-  border-radius: 3px;
-  background-color: rgba(var(--sk_foreground_min,29,28,29),.04);
-  color: #e01e5a;
-  background-color: white;
 }
 
 .graphiql-container .doc-category {
@@ -1216,7 +1186,8 @@ span.CodeMirror-selectedtext { background: none; }
   position: relative;
 }
 
-.graphiql-container .search-box-icon {
+.graphiql-container .search-box:before {
+  content: '\26b2';
   cursor: pointer;
   display: block;
   font-size: 24px;
@@ -1243,7 +1214,6 @@ span.CodeMirror-selectedtext { background: none; }
      -moz-user-select: none;
       -ms-user-select: none;
           user-select: none;
-  border: 0;
 }
 
 .graphiql-container .search-box .search-box-clear:hover {
@@ -1291,16 +1261,13 @@ span.CodeMirror-selectedtext { background: none; }
 .CodeMirror-foldgutter-folded:after {
   content: "\25B8";
 }
-.graphiql-container .history-contents {
+.graphiql-container .history-contents,
+.graphiql-container .history-contents input {
   font-family: 'Consolas', 'Inconsolata', 'Droid Sans Mono', 'Monaco', monospace;
-}
-
-.graphiql-container .history-contents {
-  margin: 0;
   padding: 0;
 }
 
-.graphiql-container .history-contents li {
+.graphiql-container .history-contents p {
   align-items: center;
   display: flex;
   font-size: 12px;
@@ -1312,58 +1279,25 @@ span.CodeMirror-selectedtext { background: none; }
   border-bottom: 1px solid #e0e0e0;
 }
 
-.graphiql-container .history-contents li button:not(.history-label) {
-  display: none;
-  margin-left: 10px;
-}
-
-.graphiql-container .history-contents li:hover button:not(.history-label),
-.graphiql-container .history-contents li:focus-within button:not(.history-label) {
-  display: inline-block;
-}
-
-.graphiql-container .history-contents input,
-.graphiql-container .history-contents button {
-  padding: 0;
-  background: 0;
-  border: 0;
-  font-size: inherit;
-  font-family: inherit;
-  line-height: 14px;
-  color: inherit;
+.graphiql-container .history-contents p.editable {
+  padding-bottom: 6px;
+  padding-top: 7px;
 }
 
 .graphiql-container .history-contents input {
   flex-grow: 1;
+  font-size: 12px;
 }
 
-.graphiql-container .history-contents input::-webkit-input-placeholder {
-  color: inherit;
-}
-
-.graphiql-container .history-contents input:-ms-input-placeholder {
-  color: inherit;
-}
-
-.graphiql-container .history-contents input::-ms-input-placeholder {
-  color: inherit;
-}
-
-.graphiql-container .history-contents input::placeholder {
-  color: inherit;
-}
-
-.graphiql-container .history-contents button {
+.graphiql-container .history-contents p:hover {
   cursor: pointer;
-  text-align: left;
 }
 
-.graphiql-container .history-contents .history-label {
+.graphiql-container .history-contents p span.history-label {
   flex-grow: 1;
   overflow: hidden;
   text-overflow: ellipsis;
-}
-.CodeMirror-info {
+}.CodeMirror-info {
   background: white;
   border-radius: 2px;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.45);
